--- a/src/frontend/package.json
+++ b/src/frontend/package.json
@@ -11,6 +11,7 @@
     "react-hook-form": "^7.52.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
+    "react-transition-group": "^4.4.5",
     "styled-components": "^6.1.12",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
@@ -40,6 +41,6 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.6"
+    "tailwindcss": "^3.4.7"
   }
 }
