create user working
cryptography added

--- a/src/backend/vulnerabilidades_web/src/main/resources/application.properties
+++ b/src/backend/vulnerabilidades_web/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=vulnerabilidades_web
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/web_vulnerabilities
+spring.datasource.username=admin
+spring.datasource.password=admin
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=update
+
+security.token.secret=JAVAGAS_19775
+security.token.secret.candidate=JAVAGAS_19775(*CANDIDATE)
