--- a/src/backend/vulnerabilidades_web/src/main/resources/application.properties
+++ b/src/backend/vulnerabilidades_web/src/main/resources/application.properties
@@ -8,4 +8,4 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 
 security.token.secret=JAVAGAS_19775
-security.token.secret.candidate=JAVAGAS_19775(*CANDIDATE)
+security.token.secret.user=JAVAGAS_19775(*uSER)
